# code-daily-quest

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  tui.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: daemon.rs  lib.rs  model.rs  paths.rs  platform.rs  quest.rs  store.rs  tracker.rs
crates/core/src/adapters/: claude.rs  codex.rs  mod.rs
crates/core/tests/: integration.rs
docs/: FRONTEND.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/references/: index.md
scripts/: package-release.sh
