[workspace]
members = ["crates/core", "crates/app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
blake3 = "1.8.4"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
flate2 = "1.1.9"
libc = "0.2.184"
notify = "8.2.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
walkdir = "2.5.0"
