[package]
name = "code-daily-quest-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
directories.workspace = true
libc.workspace = true
notify.workspace = true
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.12"

[dev-dependencies]
tempfile.workspace = true
